--- a/app/src/main/res/layout/fragment_sign_up_step0_idscan.xml
+++ b/app/src/main/res/layout/fragment_sign_up_step0_idscan.xml
@@ -86,6 +86,20 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider" />
 
+            <TextView
+                android:id="@+id/tv_how_to_qcid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="How to get a QCitizen ID?"
+                android:textColor="#1976D2"
+                android:textSize="14sp"
+                android:textStyle="italic"
+                android:background="?attr/selectableItemBackground"
+                android:padding="4dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />
+
             <ImageView
                 android:id="@+id/iv_illustration"
                 android:layout_width="0dp"
@@ -96,7 +110,7 @@
                 app:layout_constraintBottom_toTopOf="@id/btn_scan_start"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />
+                app:layout_constraintTop_toBottomOf="@id/tv_how_to_qcid" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_scan_start"
